# BalanceTonTexte

./: README.md  contact.html  contacted.html
Balance-Ton-Texte/: Reamme.md
balance-ton-texte/: Dockerfile  Readme.md  Reamme.md  pyproject.toml
balance-ton-texte/balance_ton_texte/: app.py  db_utils.py  forms.py  model_utils.py
balance-ton-texte/balance_ton_texte/static/: nada
balance-ton-texte/balance_ton_texte/templates/: about.html  contact.html  contacted.html  deco.html  home.html  model.html  nada
stack/: docker-compose.yml
static/: read
templates/: read
