[tool.poetry]
name = "balance_ton_texte"
version = "0.1.0"
description = ""
authors = ["SMascle <sebastien.mascle@le-campus-numerique.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
SQLAlchemy = "^1.4.41"
Flask-WTF = "^1.0.1"
email-validator = "^1.2.1"
psycopg2-binary = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
